--- a/USTD_Dev_all/templates/Academic_Early_Warning.html
+++ b/USTD_Dev_all/templates/Academic_Early_Warning.html
@@ -300,12 +300,12 @@
                         <ul class="list-inline">
                             <li class="list-inline-item mr-3"><input class="knob" data-width="48"
                                                                      data-height="48" data-linecap="round"
-                                                                     data-fgcolor="#605daf" value="80"
+                                                                     data-fgcolor="#605daf" value="{{number}}"
                                                                      data-skin="tron" data-angleoffset="180"
                                                                      data-readonly="true"
                                                                      data-thickness=".1"></li>
                             <li class="list-inline-item"><span class="text-muted">达标率</span>
-                                <h6>524GB/524.84GB</h6>
+                                <h6>{{num_pass}}人/{{num_all}}人</h6>
                             </li>
                         </ul>
                     </div>
