添加注释，部分bug修复

--- a/USTD_Dev_all/templates/infor.html
+++ b/USTD_Dev_all/templates/infor.html
@@ -276,21 +276,21 @@
 		                <div class="page-title-box">
 		                    <div class="float-right hide-phone">
 		                        <ul class="list-inline">
-		                            <li class="list-inline-item mr-3"><input class="knob" data-width="48"
-		                                                                     data-height="48" data-linecap="round"
-		                                                                     data-fgcolor="#605daf" value="80"
-		                                                                     data-skin="tron" data-angleoffset="180"
-		                                                                     data-readonly="true"
-		                                                                     data-thickness=".1"></li>
-		                            <li class="list-inline-item"><span class="text-muted">达标率</span>
-		                                <h6>524GB/524.84GB</h6>
-		                            </li>
-		                        </ul>
+									<li class="list-inline-item mr-3"><input class="knob" data-width="48"
+																			 data-height="48" data-linecap="round"
+																			 data-fgcolor="#605daf" value="{{number}}"
+																			 data-skin="tron" data-angleoffset="180"
+																			 data-readonly="true"
+																			 data-thickness=".1"></li>
+									<li class="list-inline-item"><span class="text-muted">成绩达标率</span>
+										<h6>{{num_pass}}人/{{num_all}}人</h6>
+									</li>
+								</ul>
 		                    </div>
 		                    <h4 class="page-title">用户信息</h4>
 		                    <div class="btn-group mt-2">
 		                        <ol class="breadcrumb hide-phone p-0 m-0">
-		                            <li class="breadcrumb-item"><a href="#">用户查看自己信息以及修改密码</a></li>
+									<li class="breadcrumb-item"><a href="#">用户查看本人信息以及修改密码</a></li>
 		                        </ol>
 		                    </div>
 		                </div>
@@ -348,7 +348,7 @@
 		<footer class="footer">
 			<div class="container-fluid">
 				<div class="row">
-					<div class="col-12">© 2022 大学生发展综合素质测评系统 </a></div>
+					<div class="col-12">© 2022 大学生发展综合素质测评系统</a></div>
 				</div>
 			</div>
 		</footer><!-- End Footer -->
