--- a/USTD_Dev_all/templates/Academic_Early_Warning.html
+++ b/USTD_Dev_all/templates/Academic_Early_Warning.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui">
-    <title>Zoogler - Responsive Bootstrap 4 Admin Dashboard</title>
+    <title>大学生发展综合素质测评系统</title>
     <meta content="Admin Dashboard" name="description">
     <meta content="Mannatthemes" name="author">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -33,7 +33,7 @@
                     <i class="mdi mdi-bowling text-success mr-1">
 
                     </i>
-                    <span class="hide-phone">大学生综合素质测评系统</span>
+                    <span class="hide-phone">大学生发展综合素质测评系统</span>
                 </a>
             </div>
             <!-- End Logo container-->
@@ -121,7 +121,7 @@
                             <div class="dropdown-item noti-title">
                                 <h5>Welcome,{{ name }}</h5>
                             </div>
-                            <a class="dropdown-item" href="#">
+                            <a class="dropdown-item" href="/login/infor.html">
                                 <i class="mdi mdi-account-circle m-r-5 text-muted">
                                 </i>用户信息</a>
                             <a class="dropdown-item" href="#">
@@ -451,7 +451,7 @@
 <footer class="footer">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-12">© 2022 Zoogler By <a href="https://www.17sucai.com">17sucai</a></div>
+            <div class="col-12">© 2022 大学生发展综合素质测评系统</a></div>
         </div>
     </div>
 </footer><!-- End Footer -->
