--- a/USTD_Dev_all/templates/index.html
+++ b/USTD_Dev_all/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui">
-    <title>大学生综合素质测评系统</title>
+    <title>大学生发展综合素质测评系统</title>
     <meta content="Admin Dashboard" name="description">
     <meta content="Mannatthemes" name="author">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -566,6 +566,13 @@
 </div>
 <!-- end wrapper -->
 <!-- Footer -->
+<footer class="footer">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-12">© 2022 大学生发展综合素质测评系统</a></div>
+        </div>
+    </div>
+</footer>
 <!-- End Footer -->
 <!-- jQuery -->
 <script src="/static/js/jquery.min.js">
@@ -597,7 +604,7 @@
 <script src="/static/js/app.js">
 </script>
 <div style="display:none;">
-    <a href="https://smalltool.github.io/">扒站工具</a>
+    <!--    <a href="https://smalltool.github.io/">扒站工具</a>-->
 </div>
 </body>
 </html>
