--- a/USTD_Dev_all/templates/infor.html
+++ b/USTD_Dev_all/templates/infor.html
@@ -8,7 +8,6 @@
 		<meta content="Admin Dashboard" name="description">
 		<meta content="Mannatthemes" name="author">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<link rel="shortcut icon" href="https://www.17sucai.com/2022/5/ekow512451/assets/images/favicon.ico">
 		<link href="/static/css/bootstrap.min.css" rel="stylesheet" type="text/css">
 		<link href="/static/css/icons.css" rel="stylesheet" type="text/css">
 		<link href="/static/css/style.css" rel="stylesheet" type="text/css">
@@ -301,18 +300,18 @@
 		                <div class="card">
 		                    <div class="card-body">
 		                        
-		                        <table class="table table-striped">
-		                            <thead>
-		                            <tr>
-		                                <th style="width: 50%;">名称</th>
-		                                <th>内容</th>
-		                                <th>操作</th>
-		                            </tr>
-		                            </thead>
-		                            <tbody>
-		                            <tr>
-		                                <td>姓名</td>
-		                                <td>{{ name }}
+		                        <table class="table table-striped" style="text-align: center;margin: auto;width: 60%;">
+									<thead>
+									<tr>
+										<th>名称</th>
+										<th>内容</th>
+										<th>操作</th>
+									</tr>
+									</thead>
+									<tbody>
+									<tr>
+										<td>姓名</td>
+										<td>{{ name }}</td>
 		                                <td><button type="button"  onclick="javascript:location.reload()">刷新</button></td>
 		                            </tr>
 		                            <tr>
@@ -333,7 +332,9 @@
 		                            <tr>
 		                                <td>密码</td>
 		                                <td>{{ pwd }}</td>
-		                                <td></td>
+										<td><a href="http://127.0.0.1:8000/login/password_change_form.html">
+											<button>修改密码</button>
+										</a></td>
 		                            </tr>
 		                            </tbody>
 		                        </table>
