--- a/USTD_Dev_all/templates/index.html
+++ b/USTD_Dev_all/templates/index.html
@@ -28,7 +28,7 @@
         <div class="container-fluid">
             <!-- Logo container-->
             <div class="logo">
-                <a href="" class="logo">
+                <a href="index.html" class="logo">
                     <i class="mdi mdi-bowling text-success mr-1">
 
                     </i>
