@LiXW author:新增发展建议功能 @WangJC author:修复超链接bug,补充上传审核材料状态显示

--- a/USTD_Dev_all/templates/form-editors.html
+++ b/USTD_Dev_all/templates/form-editors.html
@@ -182,13 +182,7 @@
                                 <a href="#">专业技术能力</a>
                                 <ul class="submenu">
                                     <li>
-                                        <a href="form-advanced.html">Form Advanced</a>
-                                    </li>
-                                    <li>
-                                        <a href="form-elements.html">Form Elements</a>
-                                    </li>
-                                    <li>
-                                        <a href="form-editors.html">Form Editors</a>
+                                        <a href="suggestion/1/">专业技术推荐</a>
                                     </li>
                                 </ul>
                             </li>
@@ -196,13 +190,7 @@
                                 <a href="#">创新创业能力</a>
                                 <ul class="submenu">
                                     <li>
-                                        <a href="charts-chartist.html">Chartist Chart</a>
-                                    </li>
-                                    <li>
-                                        <a href="charts-chartjs.html">Chartjs Chart</a>
-                                    </li>
-                                    <li>
-                                        <a href="charts-c3.html">C3 Chart</a>
+                                        <a href="suggestion/2/">创新创业推荐</a>
                                     </li>
                                 </ul>
                             </li>
@@ -210,13 +198,7 @@
                                 <a href="#">知识学习能力</a>
                                 <ul class="submenu">
                                     <li>
-                                        <a href="tables-basic.html">Basic Tables</a>
-                                    </li>
-                                    <li>
-                                        <a href="tables-datatable.html">Data Table</a>
-                                    </li>
-                                    <li>
-                                        <a href="tables-editable.html">Editable Table</a>
+                                        <a href="suggestion/3/">知识学习推荐</a>
                                     </li>
                                 </ul>
                             </li>
@@ -224,13 +206,8 @@
                                 <a href="#">管理实践能力</a>
                                 <ul class="submenu">
                                     <li>
-                                        <a href="icons-dripicons.html">Dripicons</a>
+                                        <a href="suggestion/4/">管理实践推荐</a>
                                     </li>
-                                    <li>
-                                        <a href="icons-fontawesome.html">Font Awesome</a>
-                                    </li>
-                                    <li>
-                                        <a href="icons-ion.html">Ion Icons</a>
                                     </li>
                                 </ul>
                             </li>
@@ -238,10 +215,7 @@
                                 <a href="#">综合发展能力</a>
                                 <ul class="submenu">
                                     <li>
-                                        <a href="maps-google.html">Google Map</a>
-                                    </li>
-                                    <li>
-                                        <a href="javascript:;">Vector Map</a>
+                                        <a href="suggestion/5/">综合发展推荐</a>
                                     </li>
                                 </ul>
                             </li>
