--- a/USTD_Dev_all/templates/index.html
+++ b/USTD_Dev_all/templates/index.html
@@ -8,7 +8,7 @@
     <meta content="Admin Dashboard" name="description">
     <meta content="Mannatthemes" name="author">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<!--    <link rel="shortcut icon" href="https://www.17sucai.com/2022/5/ekow512451/assets/images/favicon.ico">-->
+    <!--    <link rel="shortcut icon" href="https://www.17sucai.com/2022/5/ekow512451/assets/images/favicon.ico">-->
     <link href="/static/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="/static/css/icons.css" rel="stylesheet" type="text/css">
     <link href="/static/css/style.css" rel="stylesheet" type="text/css">
@@ -198,13 +198,7 @@
                                 <a href="#">专业技术能力</a>
                                 <ul class="submenu">
                                     <li>
-                                        <a href="form-advanced.html">Form Advanced</a>
-                                    </li>
-                                    <li>
-                                        <a href="form-elements.html">Form Elements</a>
-                                    </li>
-                                    <li>
-                                        <a href="form-editors.html">Form Editors</a>
+                                        <a href="suggestion/1/">专业技术推荐</a>
                                     </li>
                                 </ul>
                             </li>
@@ -212,13 +206,7 @@
                                 <a href="#">创新创业能力</a>
                                 <ul class="submenu">
                                     <li>
-                                        <a href="charts-chartist.html">Chartist Chart</a>
-                                    </li>
-                                    <li>
-                                        <a href="charts-chartjs.html">Chartjs Chart</a>
-                                    </li>
-                                    <li>
-                                        <a href="charts-c3.html">C3 Chart</a>
+                                        <a href="suggestion/2/">创新创业推荐</a>
                                     </li>
                                 </ul>
                             </li>
@@ -226,13 +214,7 @@
                                 <a href="#">知识学习能力</a>
                                 <ul class="submenu">
                                     <li>
-                                        <a href="tables-basic.html">Basic Tables</a>
-                                    </li>
-                                    <li>
-                                        <a href="tables-datatable.html">Data Table</a>
-                                    </li>
-                                    <li>
-                                        <a href="tables-editable.html">Editable Table</a>
+                                        <a href="suggestion/3/">知识学习推荐</a>
                                     </li>
                                 </ul>
                             </li>
@@ -240,13 +222,8 @@
                                 <a href="#">管理实践能力</a>
                                 <ul class="submenu">
                                     <li>
-                                        <a href="icons-dripicons.html">Dripicons</a>
+                                        <a href="suggestion/4/">管理实践推荐</a>
                                     </li>
-                                    <li>
-                                        <a href="icons-fontawesome.html">Font Awesome</a>
-                                    </li>
-                                    <li>
-                                        <a href="icons-ion.html">Ion Icons</a>
                                     </li>
                                 </ul>
                             </li>
@@ -254,10 +231,7 @@
                                 <a href="#">综合发展能力</a>
                                 <ul class="submenu">
                                     <li>
-                                        <a href="maps-google.html">Google Map</a>
-                                    </li>
-                                    <li>
-                                        <a href="javascript:;">Vector Map</a>
+                                        <a href="suggestion/5/">综合发展推荐</a>
                                     </li>
                                 </ul>
                             </li>
