--- a/USTD_Dev_all/templates/suggestion.html
+++ b/USTD_Dev_all/templates/suggestion.html
@@ -8,6 +8,7 @@
     <meta content="Admin Dashboard" name="description">
     <meta content="Mannatthemes" name="author">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="shortcut icon">
     <link href="/static/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="/static/css/icons.css" rel="stylesheet" type="text/css">
     <link href="/static/css/style.css" rel="stylesheet" type="text/css">
@@ -16,18 +17,21 @@
 <!-- Loader -->
 <div id="preloader">
     <div id="status">
-        <div class="spinner"></div>
+        <div class="spinner">
+
+        </div>
     </div>
 </div><!-- Navigation Bar-->
 <header id="topnav">
     <div class="topbar-main">
         <div class="container-fluid">
             <!-- Logo container-->
-            <div class="logo"><a href="index.html" class="logo"><i
+            <div class="logo"><a href="http://127.0.0.1:8000/login/index.html" class="logo"><i
                     class="mdi mdi-bowling text-success mr-1"></i><span
-                    class="hide-phone">大学生发展综合素质测评系统</span></a></div><!-- End Logo container-->
+                    class="hide-phone">大学生发展综合素质测评系统</span></a></div>
+            <!-- End Logo container-->
             <div class="menu-extras topbar-custom">
-                <ul class="list-unstyled float-right mb-0">
+                <ul class="list-inline float-right mb-0">
                     <!-- language-->
                     <li class="list-inline-item dropdown notification-list hide-phone"><a
                             class="nav-link dropdown-toggle arrow-none waves-effect" data-toggle="dropdown"
@@ -44,7 +48,7 @@
                                 src="/static/picture/russia_flag.jpg" alt="" height="16"><span>Russian
 										</span></a></div>
                     </li><!-- notification-->
-                    <li class="dropdown notification-list"><a
+                    <li class="list-inline-item dropdown notification-list"><a
                             class="nav-link dropdown-toggle arrow-none waves-effect" data-toggle="dropdown"
                             href="#" role="button" aria-haspopup="false" aria-expanded="false"><i
                             class="dripicons-mail noti-icon"></i><span
@@ -72,7 +76,7 @@
                                           class="dropdown-item notify-item border-top">View All </a>
                         </div>
                     </li><!-- notification-->
-                    <li class="dropdown notification-list"><a
+                    <li class="list-inline-item dropdown notification-list"><a
                             class="nav-link dropdown-toggle arrow-none waves-effect" data-toggle="dropdown"
                             href="#" role="button" aria-haspopup="false" aria-expanded="false"><i
                             class="dripicons-bell noti-icon"></i><span
@@ -92,18 +96,18 @@
                                     class="text-muted">You have 87 unread messages</small></p>
                         </a><!-- item--><a href="javascript:void(0);" class="dropdown-item notify-item">
                             <div class="notify-icon bg-info"><i class="mdi mdi-glass-cocktail"></i></div>
-                            <p class="notify-details"><b>Your item is shipped</b><small
+                            <p class="notify-details"><b>Your class is updated</b><small
                                     class="text-muted">It is a long established fact that a reader
                                 will</small></p>
                         </a><!-- All--><a href="javascript:void(0);"
                                           class="dropdown-item notify-item border-top">View All </a>
                         </div>
                     </li><!-- User-->
-                    <li class="dropdown notification-list"><a
-                            class="nav-link dropdown-toggle arrow-none waves-effect nav-user"
-                            data-toggle="dropdown" href="#" role="button" aria-haspopup="false"
-                            aria-expanded="false"><img src="/static/picture/avatar-1.jpg" alt="user"
-                                                       class="rounded-circle"></a>
+                    <li class="dropdown notification-list">
+                        <a class="nav-link dropdown-toggle arrow-none waves-effect nav-user" data-toggle="dropdown"
+                           href="#" role="button" aria-haspopup="false" aria-expanded="false">
+                            <img src="/static/picture/avatar-1.jpg" alt="user" class="rounded-circle">
+                        </a>
                         <span>{{ name }}</span>
                         <div class="dropdown-menu dropdown-menu-right profile-dropdown  border-0">
                             <!-- item-->
@@ -128,7 +132,7 @@
                             </a>
                         </div>
                     </li>
-                    <li class="menu-item">
+                    <li class="menu-item list-inline-item">
                         <!-- Mobile menu toggle--><a class="navbar-toggle nav-link">
                         <div class="lines"><span></span><span></span><span></span></div>
                     </a><!-- End mobile menu toggle-->
@@ -161,7 +165,7 @@
                             <li>
                                 <ul>
                                     <li>
-                                        <a href="tables-editable.html">创新创业成绩材料</a>
+                                        <a href="http://127.0.0.1:8000/login/tables-editable.html">创新创业成绩材料</a>
                                     </li>
                                 </ul>
                             </li>
@@ -178,7 +182,7 @@
                                 <a href="#">专业技术能力</a>
                                 <ul class="submenu">
                                     <li>
-                                        <a href="suggestion/1/">专业技术推荐</a>
+                                        <a href="http://127.0.0.1:8000/login/suggestion/1/">专业技术推荐</a>
                                     </li>
                                 </ul>
                             </li>
@@ -186,7 +190,7 @@
                                 <a href="#">创新创业能力</a>
                                 <ul class="submenu">
                                     <li>
-                                        <a href="suggestion/2/">创新创业推荐</a>
+                                        <a href="http://127.0.0.1:8000/login/suggestion/2/">创新创业推荐</a>
                                     </li>
                                 </ul>
                             </li>
@@ -194,7 +198,7 @@
                                 <a href="#">知识学习能力</a>
                                 <ul class="submenu">
                                     <li>
-                                        <a href="suggestion/3/">知识学习推荐</a>
+                                        <a href="http://127.0.0.1:8000/login/suggestion/3/">知识学习推荐</a>
                                     </li>
                                 </ul>
                             </li>
@@ -202,7 +206,7 @@
                                 <a href="#">管理实践能力</a>
                                 <ul class="submenu">
                                     <li>
-                                        <a href="suggestion/4/">管理实践推荐</a>
+                                        <a href="http://127.0.0.1:8000/login/suggestion/4/">管理实践推荐</a>
                                     </li>
                                     </li>
                                 </ul>
@@ -211,7 +215,7 @@
                                 <a href="#">综合发展能力</a>
                                 <ul class="submenu">
                                     <li>
-                                        <a href="suggestion/5/">综合发展推荐</a>
+                                        <a href="http://127.0.0.1:8000/login/suggestion/5/">综合发展推荐</a>
                                     </li>
                                 </ul>
                             </li>
@@ -227,7 +231,7 @@
                             <li>
                                 <ul>
                                     <li>
-                                        <a href="form-editors.html">五大方面评分准则</a>
+                                        <a href="http://127.0.0.1:8000/login/form-editors.html">五大方面评分准则</a>
                                     </li>
                                 </ul>
                             </li>
@@ -241,6 +245,7 @@
         <!-- end container -->
     </div>
     <!-- end navbar-custom -->
+
 </header><!-- End Navigation Bar-->
 <div class="wrapper">
     <div class="container-fluid">
@@ -250,21 +255,13 @@
                 <div class="page-title-box">
                     <div class="float-right hide-phone">
                         <ul class="list-inline">
-                            <li class="list-inline-item mr-3"><input class="knob" data-width="48"
-                                                                     data-height="48" data-linecap="round"
-                                                                     data-fgcolor="#605daf" value="{{number}}"
-                                                                     data-skin="tron" data-angleoffset="180"
-                                                                     data-readonly="true"
-                                                                     data-thickness=".1"></li>
-                            <li class="list-inline-item"><span class="text-muted">成绩达标率</span>
-                                <h6>{{num_pass}}人/{{num_all}}人</h6>
-                            </li>
+
                         </ul>
                     </div>
-                    <h4 class="page-title">用户信息</h4>
+                    <h4 class="page-title">成绩相关推荐</h4>
                     <div class="btn-group mt-2">
                         <ol class="breadcrumb hide-phone p-0 m-0">
-                            <li class="breadcrumb-item"><a href="#">用户查看本人信息以及修改密码</a></li>
+
                         </ol>
                     </div>
                 </div>
@@ -274,53 +271,10 @@
             <div class="col-12">
                 <div class="card">
                     <div class="card-body">
-
-                        <table class="table table-striped" style="text-align: center;margin: auto;width: 60%;">
-                            <thead>
-                            <tr>
-                                <th>名称</th>
-                                <th>内容</th>
-                                <th>操作</th>
-                            </tr>
-                            </thead>
-                            <tbody>
-                            <tr>
-                                <td>姓名</td>
-                                <td>{{ name }}</td>
-                                <td>
-                                    <button type="button" onclick="javascript:location.reload()">刷新</button>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>学号</td>
-                                <td>{{ id }}</td>
-                                <td>
-                                    <button type="button" onclick="javascript:location.reload()">刷新</button>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>年龄</td>
-                                <td>{{ age }}</td>
-                                <td>
-                                    <button type="button" onclick="javascript:location.reload()">刷新</button>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>专业</td>
-                                <td>{{ sp }}</td>
-                                <td>
-                                    <button type="button" onclick="javascript:location.reload()">刷新</button>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>密码</td>
-                                <td>{{ pwd }}</td>
-                                <td><a href="http://127.0.0.1:8000/login/password_change_form.html">
-                                    <button>修改密码</button>
-                                </a></td>
-                            </tr>
-                            </tbody>
-                        </table>
+                        <h4 class="mt-0 header-title">您的成绩等级为{{ grade }}
+                            <br>
+                            以下为相关推荐
+                        </h4>
                     </div>
                 </div>
             </div><!-- end col -->
@@ -328,7 +282,6 @@
     </div><!-- end container -->
 </div><!-- end wrapper -->
 <!-- Footer -->
-
 <footer class="footer">
     <div class="container-fluid">
         <div class="row">
@@ -346,9 +299,10 @@
 <script src="/static/js/jquery.nicescroll.js"></script>
 <script src="/static/js/jquery.scrollTo.min.js"></script><!-- KNOB JS -->
 <script src="/static/js/excanvas.js"></script>
-<script src="/static/js/jquery.knob.js"></script><!-- App js -->
+<script src="/static/js/jquery.knob.js"></script>
+<!--Wysiwig js-->
+<script src="/static/js/tinymce.min.js"></script>
+<script src="/static/js/form-editor.js"></script><!-- App js -->
 <script src="/static/js/app.js"></script>
-<script src="/static/js/console-ban.min.js"></script>
 </body>
 </html>
-
