--- a/USTD_Dev_all/templates/tables-editable.html
+++ b/USTD_Dev_all/templates/tables-editable.html
@@ -191,13 +191,7 @@
                                 <a href="#">专业技术能力</a>
                                 <ul class="submenu">
                                     <li>
-                                        <a href="form-advanced.html">Form Advanced</a>
-                                    </li>
-                                    <li>
-                                        <a href="form-elements.html">Form Elements</a>
-                                    </li>
-                                    <li>
-                                        <a href="form-editors.html">Form Editors</a>
+                                        <a href="suggestion/1/">专业技术推荐</a>
                                     </li>
                                 </ul>
                             </li>
@@ -205,13 +199,7 @@
                                 <a href="#">创新创业能力</a>
                                 <ul class="submenu">
                                     <li>
-                                        <a href="charts-chartist.html">Chartist Chart</a>
-                                    </li>
-                                    <li>
-                                        <a href="charts-chartjs.html">Chartjs Chart</a>
-                                    </li>
-                                    <li>
-                                        <a href="charts-c3.html">C3 Chart</a>
+                                        <a href="suggestion/2/">创新创业推荐</a>
                                     </li>
                                 </ul>
                             </li>
@@ -219,13 +207,7 @@
                                 <a href="#">知识学习能力</a>
                                 <ul class="submenu">
                                     <li>
-                                        <a href="tables-basic.html">Basic Tables</a>
-                                    </li>
-                                    <li>
-                                        <a href="tables-datatable.html">Data Table</a>
-                                    </li>
-                                    <li>
-                                        <a href="tables-editable.html">Editable Table</a>
+                                        <a href="suggestion/3/">知识学习推荐</a>
                                     </li>
                                 </ul>
                             </li>
@@ -233,13 +215,8 @@
                                 <a href="#">管理实践能力</a>
                                 <ul class="submenu">
                                     <li>
-                                        <a href="icons-dripicons.html">Dripicons</a>
+                                        <a href="suggestion/4/">管理实践推荐</a>
                                     </li>
-                                    <li>
-                                        <a href="icons-fontawesome.html">Font Awesome</a>
-                                    </li>
-                                    <li>
-                                        <a href="icons-ion.html">Ion Icons</a>
                                     </li>
                                 </ul>
                             </li>
@@ -247,10 +224,7 @@
                                 <a href="#">综合发展能力</a>
                                 <ul class="submenu">
                                     <li>
-                                        <a href="maps-google.html">Google Map</a>
-                                    </li>
-                                    <li>
-                                        <a href="javascript:;">Vector Map</a>
+                                        <a href="suggestion/5/">综合发展推荐</a>
                                     </li>
                                 </ul>
                             </li>
@@ -320,7 +294,8 @@
                                 <th>证明材料描述</th>
                                 <th>所属类别</th>
                                 <th>证明材料图片</th>
-                                <th></th>
+                                <th>审核状态</th>
+                                <th>操作</th>
                             </tr>
                             </thead>
                             <tbody>
@@ -330,6 +305,15 @@
                                 <td>{{ item.miaoshu }}</td>
                                 <td>{{ item.leibie }}</td>
                                 <td><img height="100px" width="100px" src="{{ MEDIA_URL }}{{ item.image }}"></td>
+                                {% if item.zhuangtai == "T" %}
+                                <td><font color="green">通过</font></td>
+                                {% endif %}
+                                {% if item.zhuangtai == "F" %}
+                                <td><font color="red">未通过</font></td>
+                                {% endif %}
+                                {% if item.zhuangtai == "D" %}
+                                <td><font color="#CEBE29">待审核</font></td>
+                                {% endif %}
                                 <td>
                                     <a href="/shenhe_delete.html?id={{ item.id }}">删除</a>
                                 </td>
