--- a/USTD_Dev_all/templates/suggestion.html
+++ b/USTD_Dev_all/templates/suggestion.html
@@ -165,7 +165,7 @@
                             <li>
                                 <ul>
                                     <li>
-                                        <a href="http://127.0.0.1:8000/login/tables-editable.html">创新创业成绩材料</a>
+                                        <a href="http://127.0.0.1:8000/login/tables-editable.html">上传审核材料</a>
                                     </li>
                                 </ul>
                             </li>
