--- a/USTD_Dev_all/templates/Academic_Early_Warning.html
+++ b/USTD_Dev_all/templates/Academic_Early_Warning.html
@@ -285,7 +285,8 @@
                     <h4 class="page-title">学业预警功能</h4>
                     <div class="btn-group mt-2">
                         <ol class="breadcrumb hide-phone p-0 m-0">
-                            <li class="breadcrumb-item"><a href="#">学业预警功能是来提醒学生要满足学校的毕业要求</a></li>
+                            <li class="breadcrumb-item"><a href="#">学业预警功能是来提醒学生要满足学校的毕业要求</a>
+                            </li>
                         </ol>
                     </div>
                 </div>
