--- a/USTD_Dev_all/templates/error2.html
+++ b/USTD_Dev_all/templates/error2.html
@@ -21,7 +21,8 @@
                 <h1 class="">文件上传错误</h1>
                 <h3 class="">请重新上传</h3>
                 <br>
-                <a class="btn btn-danger mb-5 waves-effect waves-light" href=" http://127.0.0.1:8000/login/tables-editable.html">返回</a>
+                <a class="btn btn-danger mb-5 waves-effect waves-light"
+                   href=" http://127.0.0.1:8000/login/tables-editable.html">返回</a>
             </div>
         </div>
     </div>
