--- a/USTD_Dev_all/templates/form-editors.html
+++ b/USTD_Dev_all/templates/form-editors.html
@@ -261,7 +261,9 @@
                     <h4 class="page-title">系统评分标准和细则</h4>
                     <div class="btn-group mt-2">
                         <ol class="breadcrumb hide-phone p-0 m-0">
-                            <li class="breadcrumb-item"><a href="#">准则参考链接:<a href="https://jwc.hunnu.edu.cn/info/1082/8044.htm" >湖南师范大学本科生学业预警实施细则</a></li>
+                            <li class="breadcrumb-item"><a href="#">准则参考链接:<a
+                                    href="https://jwc.hunnu.edu.cn/info/1082/8044.htm">湖南师范大学本科生学业预警实施细则</a>
+                            </li>
                         </ol>
                     </div>
                 </div>
