--- a/USTD_Dev_all/templates/index.html
+++ b/USTD_Dev_all/templates/index.html
@@ -224,7 +224,7 @@
                                     <li>
                                         <a href="suggestion/4/">管理实践推荐</a>
                                     </li>
-                                    </li>
+
                                 </ul>
                             </li>
                             <li class="has-submenu">
@@ -368,6 +368,25 @@
                                         <div class="col-10 text-right">
                                             <h5 class="mt-0 mb-1">{{gl}}人</h5>
                                             <p class="mb-0 font-12 text-muted">管理实践能力</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3">
+                        <div class="card ">
+                            <div class="card-body">
+                                <div class="icon-contain">
+                                    <div class="row">
+                                        <div class="col-2 align-self-center">
+                                            <i class="fas fa-database text-gradient-primary">
+
+                                            </i>
+                                        </div>
+                                        <div class="col-10 text-right">
+                                            <h5 class="mt-0 mb-1">{{gl}}人</h5>
+                                            <p class="mb-0 font-12 text-muted">综合发展能力</p>
                                         </div>
                                     </div>
                                 </div>
