4月17日功能修改

--- a/USTD_Dev_all/templates/index.html
+++ b/USTD_Dev_all/templates/index.html
@@ -309,7 +309,7 @@
                                             </i>
                                         </div>
                                         <div class="col-10 text-right">
-                                            <h5 class="mt-0 mb-1">{{zh}}人</h5>
+                                            <h5 class="mt-0 mb-1">{{score.zy}}分</h5>
                                             <p class="mb-0 font-12 text-muted">专业技术能力</p>
                                         </div>
                                     </div>
@@ -328,7 +328,7 @@
                                             </i>
                                         </div>
                                         <div class="col-10 text-right">
-                                            <h5 class="mt-0 mb-1">{{ch}}人</h5>
+                                            <h5 class="mt-0 mb-1">{{score.cx}}分</h5>
                                             <p class="mb-0 font-12 text-muted">创新创业能力</p>
                                         </div>
                                     </div>
@@ -347,7 +347,7 @@
                                             </i>
                                         </div>
                                         <div class="col-10 text-right">
-                                            <h5 class="mt-0 mb-1">{{know}}人</h5>
+                                            <h5 class="mt-0 mb-1">{{score.zs}}分</h5>
                                             <p class="mb-0 font-12 text-muted">知识学习能力</p>
                                         </div>
                                     </div>
@@ -366,7 +366,7 @@
                                             </i>
                                         </div>
                                         <div class="col-10 text-right">
-                                            <h5 class="mt-0 mb-1">{{gl}}人</h5>
+                                            <h5 class="mt-0 mb-1">{{score.gl}}分</h5>
                                             <p class="mb-0 font-12 text-muted">管理实践能力</p>
                                         </div>
                                     </div>
@@ -385,7 +385,7 @@
                                             </i>
                                         </div>
                                         <div class="col-10 text-right">
-                                            <h5 class="mt-0 mb-1">{{gl}}人</h5>
+                                            <h5 class="mt-0 mb-1">{{score.zh}}分</h5>
                                             <p class="mb-0 font-12 text-muted">综合发展能力</p>
                                         </div>
                                     </div>
